# paso-01-scaffold

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs
