[package]
name = "paso-01-scaffold"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

# Un solo binario, sin test harness (no hay runner de tests en ESP32)
[[bin]]
name = "paso-01-scaffold"
harness = false

# ─── Release: optimizar para tamaño (flash es limitado) ───
[profile.release]
opt-level = "s"    # Optimizar por tamaño (no velocidad)
lto = true         # Link-Time Optimization: elimina código muerto entre crates
codegen-units = 1  # Un solo codegen unit = mejor optimización, build más lento

# ─── Dev: debug symbols + optimización mínima ───
[profile.dev]
debug = true       # Symbols para debugging con probe-rs o monitor
opt-level = "z"    # Aún en dev optimizamos tamaño (flash limitado)

[dependencies]
# Logging (la macro log::info!, log::error!, etc.)
log = "0.4"

# ESP-IDF HAL: Hardware Abstraction Layer
# Acceso a GPIO, LEDC (PWM), SPI, I2C, timers, etc.
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }

# ESP-IDF SVC: Servicios de alto nivel
# WiFi, HTTP, WebSocket, NVS, event loop, etc.
esp-idf-svc = { version = "0.51", features = ["critical-section"] }

# Manejo de errores con contexto
anyhow = "1.0"

[build-dependencies]
# Build system para esp-idf: descarga y compila el SDK de C
embuild = "0.33"
